@@ -71,7 +71,7 @@ class S3(object):
 				return httplib.HTTPConnection(self.get_hostname(bucket))
 
 	def get_hostname(self, bucket):
-		if bucket and not Config().use_old_connect_method:
+		if bucket and self.check_bucket_name_dns_conformity(bucket):
 			if self.redir_map.has_key(bucket):
 				host = self.redir_map[bucket]
 			else:
@@ -85,7 +85,7 @@ class S3(object):
 		self.redir_map[bucket] = redir_hostname
 
 	def format_uri(self, resource):
-		if resource['bucket'] and Config().use_old_connect_method:
+		if resource['bucket'] and not self.check_bucket_name_dns_conformity(resource['bucket']):
 			uri = "/%s%s" % (resource['bucket'], resource['uri'])
 		else:
 			uri = resource['uri']
@@ -480,13 +480,35 @@ class S3(object):
 		debug("SignHeaders: " + repr(h))
 		return base64.encodestring(hmac.new(self.config.secret_key, h, sha).digest()).strip()
 
-	def check_bucket_name(self, bucket):
-		invalid = re.compile("([^a-z0-9\._-])").search(bucket)
-		if invalid:
-			raise ParameterError("Bucket name '%s' contains disallowed character '%s'. The only supported ones are: lowercase us-ascii letters (a-z), digits (0-9), dot (.), hyphen (-) and underscore (_)." % (bucket, invalid.groups()[0]))
+	def check_bucket_name(self, bucket, dns_strict = True):
+		if dns_strict:
+			invalid = re.search("([^a-z0-9\.-])", bucket)
+			if invalid:
+				raise ParameterError("Bucket name '%s' contains disallowed character '%s'. The only supported ones are: lowercase us-ascii letters (a-z), digits (0-9), dot (.) and hyphen (-)." % (bucket, invalid.groups()[0]))
+		else:
+			invalid = re.search("([^A-Za-z0-9\._-])", bucket)
+			if invalid:
+				raise ParameterError("Bucket name '%s' contains disallowed character '%s'. The only supported ones are: us-ascii letters (a-z, A-Z), digits (0-9), dot (.), hyphen (-) and underscore (_)." % (bucket, invalid.groups()[0]))
+
 		if len(bucket) < 3:
 			raise ParameterError("Bucket name '%s' is too short (min 3 characters)" % bucket)
 		if len(bucket) > 255:
 			raise ParameterError("Bucket name '%s' is too long (max 255 characters)" % bucket)
+		if dns_strict:
+			if len(bucket) > 63:
+				raise ParameterError("Bucket name '%s' is too long (max 63 characters)" % bucket)
+			if re.search("-\.", bucket):
+				raise ParameterError("Bucket name '%s' must not contain sequence '-.' for DNS compatibility" % bucket)
+			if re.search("\.\.", bucket):
+				raise ParameterError("Bucket name '%s' must not contain sequence '..' for DNS compatibility" % bucket)
+			if not re.search("^[0-9a-z]", bucket):
+				raise ParameterError("Bucket name '%s' must start with a letter or a digit" % bucket)
+			if not re.search("[0-9a-z]$", bucket):
+				raise ParameterError("Bucket name '%s' must end with a letter or a digit" % bucket)
 		return True
 
+	def check_bucket_name_dns_conformity(self, bucket):
+		try:
+			return self.check_bucket_name(bucket, dns_strict = True)
+		except ParameterError:
+			return False
